Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30066

Git commands fail on windows when using the QProcess backend

    XMLWordPrintable

Details

    • Windows
    • 2a2772ba4 (master), 7802e475c (master), 8e1f9169c (dev), 078c68462 (6.7), d01654ffb (6.6), 3aad91058 (tqtc/lts-6.5)

    Description

      For example when committing a change via the git commit editor just the Version Control output pane is shown with the following output:

      07:02:28 Running in "C:\dev\src\qcr": "C:\Program Files\Git\cmd\git.exe" commit -F C:\Users\davschul\AppData\Local\Temp\QtCreator.menSeE --amend.
      The command "C:\Program Files\Git\cmd\git.exe commit -F C:\Users\davschul\AppData\Local\Temp\QtCreator.menSeE --amend" could not be started.
      Cannot commit 1 file(s).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jkobus Jarek Kobus
              davschul David Schulz
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: